# AIGovern_Pro

./: .cowork_start_backend.sh  .cowork_start_frontend.sh  .env.atomic  .env.example  .gitignore  .mcp.json  AGENTS.md  AI-Agent-Harness架构知识库.md  AI_Assistant_Features_Architecture_Reference.md  AI产运分享-PPT大纲与内容要点.md  AI产运分享-PPT生成Prompt.md  AI产运分享-从想法到MVP流水线.md  AI驱动业务提效实战-分享版.md  ATOMIC_SETUP.md  CLAUDE.md  DEPLOYMENT_STATUS.md  DEPLOY_DOMAIN.md  DEPLOY_GUIDE.md  MCP_CUSTOMIZATION_GUIDE.md  MCP_DEMO_GUIDE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_TOOL_EXAMPLES.md  README.md  README_RESEARCH.md  RESEARCH_EXEC_SUMMARY.txt  START.sh  START_ATOMIC.md  atomic.sh  cloudstudio-setup.sh  hello.py  research-log-2026-04-15-16.md  run-atomic.sh  test_intents.py  test_stream.py  vercel.json  verify_deployment.sh  verify_structured_output.py
.atomic/: settings.json
.claude/: ATOMIC_CONFIG.md  MCP_CONFIG.md  settings.json  settings.local.json
.codex/: config.toml
.planning/: CLAWTEAM_GUIDE.md  README.md  clawteam-gsd-prompt.md  gsd-clawteam-init.sh  gsd-clawteam-orchestrator.py  gsd-clawteam-workflow.md
AIGovern_Pro/: .gitignore  SPEC.md
AIGovern_Pro/python-sdk/: README.md  pyproject.toml
AIGovern_Pro/python-sdk/ai_debug_sdk/: collector.py
backend/: .env.example  .gitignore  DATA_QUERY_FLOW_GUIDE.md  DIAGNOSIS_FLOW_GUIDE.md  OPERATION_FLOW_GUIDE.md  QUICKSTART.md  RAG_FLOW_GUIDE.md  SETUP_NEXT_STEPS.md  SUPABASE_QUICKREF.md  SUPABASE_SETUP.md  docker-compose.yml  requirements-vercel.txt  requirements.txt  run.py  test_api_integration.py  test_database.py  test_e2e.py  test_llm.py  test_mcp_system.py  test_rag_e2e.py  test_system.py  vercel.json
debug-mcp/: SPEC.md
debug-mcp/python-sdk/: .gitignore  pyproject.toml
debug-mcp/python-sdk/ai_debug_sdk/: __init__.py  console_hook.py  network_hook.py
docs/: AI_ASSISTANT_DESIGN_TRENDS.md  CHATPANEL_ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_EXAMPLES.md  RESEARCH_INDEX.md  STRUCTURED_OUTPUT_FIX.md
frontend/: .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
test_docs/: company_policy.md  cowork_smoke_test_2026-04-24.md  product_specs.md  (+2 more)
(+170 files in other folders)
