[project]
name = "ai-debug-sdk"
version = "0.1.0"
description = "Python SDK for AI Debug - console and network monitoring"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_debug_sdk*"]