[project]
name = "ai-debug-sdk"
version = "0.1.0"
description = "Python SDK for AI Debug - console and network monitoring for AI Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AIGovern_Pro Contributors"}
]
keywords = [
    "ai",
    "debug",
    "monitoring",
    "console",
    "network",
    "httpx",
    "requests",
    "claude",
    "agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/AIGovern_Pro#readme"
Repository = "https://github.com/your-org/AIGovern_Pro.git"
Documentation = "https://your-org.github.io/AIGovern_Pro/"
Issues = "https://github.com/your-org/AIGovern_Pro/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_debug_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.package-data]
ai_debug_sdk = ["py.typed"]
